// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClickableCard should apply the correct styling, HTMLAttributes, and allow a ref 1`] = `
<div
  class="rmd-box rmd-box--column rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--shadowed rmd-card--clickable"
  data-testid="card"
  role="button"
  tabindex="0"
/>
`;

exports[`ClickableCard should apply the correct styling, HTMLAttributes, and allow a ref 2`] = `
<div
  class="rmd-box rmd-box--column rmd-box--align-stretch rmd-box--justify-stretch rmd-card rmd-card--shadowed rmd-card--clickable custom-class-name"
  data-testid="card"
  role="button"
  style="color: white;"
  tabindex="0"
/>
`;
